# engineer_project

./: blending.py  colormap.py  colors_window.py  main.py  model_inferer.py  napari_color_format.py  napari_window.py  params.py  pyproject.toml  save_segmentation_window.py  segmentation_colors.py  settings_window.py  testing.py  text_alignment.py  waiting_window.py
enums/: colormap.py  segmentation_colors.py
test/: napari_color_format_test.py  napari_window_test.py
