[tool.poetry]
name = "engineer"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
napari = "^0.4"
scikit-image = "^0.20"
napari-nifti = "^0.0.12"
numpy = "^1.20"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
